csharp/grpc-unity-tls/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server
  labels:
    app: grpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc
  template:
    metadata:
      labels:
        app: grpc
    spec:
      containers:
        - name: grpc
          image: guitarrapc/grpc-lab-dotnet-service:2.33.1
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "200Mi"
              cpu: "500m"
          readinessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=localhost:80"]
            initialDelaySeconds: 10
          livenessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=localhost:80"]
            initialDelaySeconds: 15
