csharp/grpc-unity-tls/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-svc
spec:
  type: NodePort
  selector:
    app: grpc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
